
Important changes in 1.3 (2018-04-XX)

Changes in this release:
FFMpeg has evolved, many API parts have been deprecated and will be dropped
soon. This release adopts these changes by conditionally using the new
APIs from the FFMpeg version on that they are available.

* Feature: Set stream duration from source file as hint for encoder.
* Feature: Enhanced logging output for better readability.
* Fix deprecation: 2017-xx-xx - xxxxxxx - lavr 4.0.0 - avresample.h
    Deprecate the entire library. Merged years ago to provide compatibility
    with Libav, it remained unmaintained by the FFmpeg project and duplicated
    functionality provided by libswresample.
    swresample is the preferred library in FFMpeg, so it will be used if compiled
    with FFMpeg by default, even before being deprecated. With libav, which
    makes libavresample available only, the latter will be used.
* Fix deprecation: 2016-04-21 - 7fc329e - lavc 57.37.100 - avcodec.h
    Add a new audio/video encoding and decoding API with decoupled input
    and output -- avcodec_send_packet(), avcodec_receive_frame(),
    avcodec_send_frame() and avcodec_receive_packet().
* Fix deprecation: 2018-01-xx - xxxxxxx - lavf 58.7.100 - avformat.h
    Deprecate AVFormatContext filename field which had limited length, use the
    new dynamically allocated url field instead.
* Fix deprecation: 2018-xx-xx - xxxxxxx - lavf 58.9.100 - avformat.h
    Deprecate use of av_register_input_format(), av_register_output_format(),
    av_register_all(), av_iformat_next(), av_oformat_next().
    NOTE: av_iformat_next/av_oformat_next() lack a replacement (currently
    still used in tools/probetest.c "static void probe" in 58.10.100)
* Fix deprecation: 2018-xx-xx - xxxxxxx - lavc 58.10.100 - avcodec.h
    Deprecate use of avcodec_register(), avcodec_register_all(),
    av_codec_next(), av_register_codec_parser(), and av_parser_next().
    Add av_codec_iterate() and av_parser_iterate().